Suppress deprecation warnings and fix `Thread` API usage
- Annotated overridden methods in `ReadOnlyResultSetMixinTest` with `@SuppressWarnings("deprecation")` to silence warnings for deprecated APIs.
- Updated `AbstractBQStatement` to use `Thread.threadId()` instead of `Thread.getId()` for improved Java 19 compatibility.
- Added `verbose` configuration in `pom.xml` for Maven plugin for consistent outputs.